services/strategy-generator/check_strat_fix.txt
warning: unused imports: `Axis` and `s`
 --> /Users/tomxiao/Desktop/Git/personal/HermesFlow/services/backtest-engine/src/factors/indicators.rs:2:15
  |
2 | use ndarray::{s, Array2, Axis};
  |               ^          ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `crate::factors::moving_averages::MovingAverages`
 --> /Users/tomxiao/Desktop/Git/personal/HermesFlow/services/backtest-engine/src/factors/vwap.rs:1:5
  |
1 | use crate::factors::moving_averages::MovingAverages;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::factors::moving_averages::MovingAverages`
 --> /Users/tomxiao/Desktop/Git/personal/HermesFlow/services/backtest-engine/src/factors/mfi.rs:1:5
  |
1 | use crate::factors::moving_averages::MovingAverages;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `info` and `warn`
 --> /Users/tomxiao/Desktop/Git/personal/HermesFlow/services/backtest-engine/src/backtest.rs:2:15
  |
2 | use tracing::{info, warn};
  |               ^^^^  ^^^^

warning: unused variable: `batch`
  --> /Users/tomxiao/Desktop/Git/personal/HermesFlow/services/backtest-engine/src/backtest.rs:79:14
   |
79 |         let (batch, time) = position.dim();
   |              ^^^^^ help: if this is intentional, prefix it with an underscore: `_batch`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: `backtest-engine` (lib) generated 5 warnings (run `cargo fix --lib -p backtest-engine` to apply 4 suggestions)
    Checking strategy-generator v0.1.0 (/Users/tomxiao/Desktop/Git/personal/HermesFlow/services/strategy-generator)
error[E0425]: cannot find value `fdv` in this scope
  --> src/backtest.rs:94:17
   |
94 |                 fdv[[0, i]] = c.fdv.to_f64().unwrap_or(0.0);
   |                 ^^^ not found in this scope

error[E0425]: cannot find value `fdv` in this scope
   --> src/backtest.rs:100:95
    |
100 |                 FeatureEngineer::compute_features(&close, &open, &high, &low, &volume, &liq, &fdv);
    |                                                                                               ^^^ not found in this scope

warning: unused import: `Axis`
 --> src/backtest.rs:5:31
  |
5 | use ndarray::{Array2, Array3, Axis};
  |                               ^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unnecessary parentheses around assigned value
   --> src/backtest.rs:309:36
    |
309 |                  current_equity *= (1.0 + pnl);
    |                                    ^         ^
    |
    = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
    |
309 -                  current_equity *= (1.0 + pnl);
309 +                  current_equity *= 1.0 + pnl;
    |

warning: unused import: `Serialize`
 --> src/api.rs:6:26
  |
6 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src/api.rs:9:5
  |
9 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::Mutex`
  --> src/api.rs:10:5
   |
10 | use tokio::sync::Mutex;
   |     ^^^^^^^^^^^^^^^^^^

warning: unused variable: `data`
   --> src/backtest.rs:256:21
    |
256 |         if let Some(data) = self.cache.get(symbol) {
    |                     ^^^^ help: if this is intentional, prefix it with an underscore: `_data`
    |
    = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `strategy-generator` (bin "strategy-generator") generated 6 warnings
error: could not compile `strategy-generator` (bin "strategy-generator") due to 2 previous errors; 6 warnings emitted
